config/500-controller.yaml
# Copyright 2019
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: awssqs-controller-manager
  namespace: knative-sources
  labels:
    control-plane: awssqs-controller-manager
spec:
  selector:
    matchLabels: &labels
      control-plane: awssqs-controller-manager
  serviceName: awssqs-controller-manager
  template:
    metadata:
      labels: *labels
    spec:
      serviceAccountName: awssqs-controller-manager
      containers:
        - name: manager
          image: github.com/whynowy/knative-source-awssqs/cmd/controller
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 20m
              memory: 20Mi
      serviceAccount: awssqs-controller-manager
      terminationGracePeriodSeconds: 10
